# liturgical-calendar

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .pylintrc  CLI_DESIGN.md  LINT_FIXES.md  MANIFEST.in  README.md  REFACTORING_DECISIONS.md  REFACTORING_PLAN.md  TODO.md  cache_artwork_images.py  config.yaml  create_liturgical_image.py  pyproject.toml  requirements.txt  test-results.txt  test_results.txt
.github/workflows/: integration.yml  publish.yml  test.yml
docs/: api_reference.md  architecture.md  caching.md  image_generation.md  liturgical_logic.md  raspberry_pi_eink.md  testing.md
docs/examples/: basic_usage.py  batch_processing.py  combined_api_example.py  custom_layouts.py  first_run_example.py  update_eink_display.py
liturgical_calendar/: artwork.py  cli.py  exceptions.py  funcs.py  liturgical.py  logging.py
liturgical_calendar/caching/: artwork_cache.py  image_processor.py
liturgical_calendar/config/: settings.py
liturgical_calendar/core/: artwork_manager.py  readings_manager.py  season_calculator.py
liturgical_calendar/data/: artwork_data.py  feasts_data.py  readings_data.py
liturgical_calendar/image_generation/: font_manager.py  image_builder.py  layout_engine.py  pipeline.py
liturgical_calendar/services/: __init__.py  config_service.py  feast_service.py  image_service.py
liturgical_calendar/utils/: __init__.py  file_system.py
tests/: test_feasts.py  test_generate_liturgical_images.py
tests/integration/: test_cli_integration.py  test_feasts.py  test_generate_liturgical_images.py
tests/unit/: test_artwork.py  test_artwork_cache.py  test_artwork_manager.py  test_cli.py  test_cli_cache_dir.py  test_combined_api.py  test_config_service.py  test_feast_service.py  test_file_system.py  test_font_manager.py  test_image_builder.py  test_image_generation_pipeline.py  test_image_processor.py  test_image_service.py  test_layout_engine.py  test_readings_manager.py  test_season_calculator.py
vanderbilt/: COMPARE_LECTIONARIES_TASK.md  README.md
vanderbilt/data/: Year A - All Seasons_25-26.csv  Year B - All Seasons_26-27.csv  Year C - All Seasons_24-25.csv
vanderbilt/src/: build_liturgical_data_from_vanderbilt.py  compare_rcl_to_sunday_readings.py
