[tool.poetry]
name = "liturgical-calendar"
version = "0.1.0"
description = "Library to determine liturgical dates and colours for the Anglican Church of England"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]
readme = "README.md"
packages = [{include = "liturgical_calendar"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.8.2"
Pillow = "^11.0.0"
PyYAML = "^6.0"
requests = "^2.25"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
astroid = "^3.1.0"
autopep8 = "^2.0.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
liturgical_calendar = 'liturgical_calendar.liturgical:main'
litcal = 'liturgical_calendar.cli:main'
